--- a/src/components/QuizComponent/QuizComponent.css
+++ b/src/components/QuizComponent/QuizComponent.css
@@ -66,13 +66,14 @@
     margin-top: 20px;
   }
   
-  .explanation button {
+  .navigation-buttons button {
     background-color: #007bff;
     border: none;
     color: white;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
+    margin-top: 1rem;
   }
   
   .explanation button:hover {
